--- a/css/style.css
+++ b/css/style.css
@@ -9,28 +9,28 @@ body {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: calc(32px * 8);
-	height: calc(32px * 5);
+	width: calc(100% - 128px - 40px);
+	height: calc(100% - 20px);
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	border: 10px solid transparent;
-	border-image: url(../images/FrameInner.png) 10 round;
-	background: rgba(0,0,0,0.6);
+	border-image: url(../images/Frame.svg) 10 round;
+	background: rgba(0,0,0,1);
 }
 
 #container2 {
 	position: absolute;
 	top: 0px;
-	left: calc((32px * 8) + 20px);
+	left: calc(100% - 128px - 20px);
 	width: calc(32px * 4);
-	height: calc(32px * 5);
+	height: calc(100% - 20px);
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	border: 10px solid transparent;
-	border-image: url(../images/FrameInner.png) 10 round;
-	background: rgba(0,0,0,0.6);
+	border-image: url(../images/Frame.svg) 10 round;
+	background: rgba(0,0,0,1);
 }
 
 img {
@@ -39,42 +39,36 @@ img {
 }
 
 #items {
-	width: calc(32px * 8);
-	height: calc(32px * 3);
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	align-content: flex-start;
 }
 
 #tools {
-	width: calc(32px * 8);
-	height: calc(32px * 2);
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	align-content: flex-start;
 }
 
 #healthnode {
-	padding-top: 16px;
 	width: 32px;
 	height: 32px;
 }
 
 #healthnodetext {
-	padding-top: 16px;
 	width: 32px;
 	height: 32px;
 	line-height: 32px;
 }
 
 #healthfragment {
-	padding-top: 16px;
 	width: 32px;
 	height: 32px;
 }
 
 #healthfragmenttext {
-	padding-top: 16px;
 	width: 32px;
 	height: 32px;
 	line-height: 32px;
